--- a/Shaun Stoltz/config.properties
+++ b/Shaun Stoltz/config.properties
@@ -2,9 +2,9 @@
 BASIC CONFIGURATION
 ==========================================================
 
-baseurl=http://66.197.236.199/pmapp/index.php
-admin_username=gcaufy@gopromis.com
-admin_password=111111
+baseurl=http://66.197.236.199/test/pmapp
+admin_username=test@gopremis.com
+admin_password=11111111
 username=
 password=
 
@@ -12,6 +12,10 @@ password=
 ===========================================================
 ENTITY AND CONTACT
 ===========================================================
+
+=======================
+New Entity Creation
+=======================
 legalFormType=Limited Corporation
 entityType=Vendor
 legalFormName=Catton US, Inc
@@ -30,4 +34,34 @@ website=www.cattonusinc.com
 financialYearMonth=March
 financialYearDate=31
 paymentMethod=EFT
+
+
+==================
+Search 
+==================
+search_legalFormName=Catton US, Inc
+ 
+ 
+ 
+====================================
+Add Contact in Existing Contact List 
+====================================
+existing_contact_firstName=
+existing_contact_lastName=
+existing_contact_email=
+existing_contact_altemail=
+existing_contact_phone=
+existing_contact_daytimeLandline=
+existing_contact_daytimeLandline_ext=
+existing_contact_nighttimeLandline=
+existing_contact_nighttimeLandline_ext=
+existing_contact_position=
+existing_contact_address1=
+existing_contact_address2=
+existing_contact_address3=
+existing_contact_zip=
+existing_contact_country=
+existing_contact_region=
+existing_contact_contactType=
+ 
  
